# LEDSpicerUI

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  index.html  main.js  package-lock.json  package.json
assets/style/: main.css
data/: main.glade.in  style.css
src/: ConfigFile.cpp  ConfigFile.hpp  Defaults.cpp  Defaults.hpp  InputFile.cpp  InputFile.hpp  LEDSpicerUI.cpp  LEDSpicerUI.hpp  Message.cpp  Message.hpp  XMLHelper.cpp  XMLHelper.hpp  configuration.js  device.js  element.js  errors.js  generic.js  group.js  index.html  main.js  settings.js  view.js
src/Ui/: DialogAnimation.cpp  DialogAnimation.hpp  DialogColors.cpp  DialogColors.hpp  DialogDevice.cpp  DialogDevice.hpp  DialogElement.cpp  DialogElement.hpp  DialogForm.cpp  DialogForm.hpp  DialogGroup.cpp  DialogGroup.hpp  DialogImport.cpp  DialogImport.hpp  DialogInput.cpp  DialogInput.hpp  DialogInputLinkMaps.cpp  DialogInputLinkMaps.hpp  DialogInputMap.cpp  DialogInputMap.hpp  DialogProcess.cpp  DialogProcess.hpp  DialogProfile.cpp  DialogProfile.hpp  DialogRestrictor.cpp  DialogRestrictor.hpp  DialogSelectElements.cpp  DialogSelectElements.hpp  MainDialogs.cpp  MainDialogs.hpp  MainWindow.cpp  MainWindow.hpp  Message.cpp  Message.hpp  OrdenableFlowBox.cpp  OrdenableFlowBox.hpp  OrdenableListBox.cpp  OrdenableListBox.hpp
src/Ui/DataDialogs/: DialogAnimation.cpp  DialogAnimation.hpp  DialogDevice.cpp  DialogDevice.hpp  DialogElement.cpp  DialogElement.hpp  DialogForm.cpp  DialogForm.hpp  DialogGroup.cpp  DialogGroup.hpp  DialogInput.cpp  DialogInput.hpp  DialogInputLinkMaps.cpp  DialogInputLinkMaps.hpp  DialogInputMap.cpp  DialogInputMap.hpp  DialogProcess.cpp  DialogProcess.hpp  DialogProfile.cpp  DialogProfile.hpp  DialogRestrictor.cpp  DialogRestrictor.hpp  DialogRestrictorMap.cpp  DialogRestrictorMap.hpp  DialogSelect.cpp  DialogSelect.hpp  DialogSelectElements.cpp  DialogSelectElements.hpp
src/Ui/Forms/: BoxButton.cpp  BoxButton.hpp  BoxButtonCollection.cpp  BoxButtonCollection.hpp  CollectionHandler.cpp  CollectionHandler.hpp  Device.cpp  Device.hpp  Element.cpp  Element.hpp  Form.cpp  Form.hpp  Group.cpp  Group.hpp  Input.cpp  Input.hpp  InputMap.cpp  InputMap.hpp  NameOnly.cpp  NameOnly.hpp  PinHandler.cpp  PinHandler.hpp  Process.cpp  Process.hpp  Profile.cpp  Profile.hpp  Restrictor.cpp  Restrictor.hpp
src/Ui/Storage/: BoxButton.cpp  BoxButton.hpp  BoxButtonCollection.cpp  BoxButtonCollection.hpp  CollectionHandler.cpp  CollectionHandler.hpp  Data.cpp  Data.hpp  Device.cpp  Device.hpp  Element.cpp  Element.hpp  Group.cpp  Group.hpp  Input.cpp  Input.hpp  InputMap.cpp  InputMap.hpp  InputMapLink.cpp  InputMapLink.hpp  NameOnly.cpp  NameOnly.hpp  PinHandler.cpp  PinHandler.hpp  Process.cpp  Process.hpp  Profile.cpp  Profile.hpp  Restrictor.cpp  Restrictor.hpp  RestrictorMap.cpp  RestrictorMap.hpp
